--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,21 @@ body {
 /* Active */
 
 /* Common */
+.word-break-all {
+  word-break: break-all;
+}
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp.line-2 {
+  -webkit-line-clamp: 2;
+}
+
 .main-content {
   width: 1170px;
   /* min-width: calc(100% - 48px); */
@@ -45,6 +60,26 @@ a {
 
 .btn:hover {
   opacity: 0.9;
+  cursor: pointer;
+}
+
+.heading {
+  color: #171100;
+
+  font-family: var(--font-heading);
+  font-weight: 700;
+  letter-spacing: -1.16px;
+}
+
+.heading.lv1 {
+  font-size: 5.8rem;
+  line-height: 1.17; /* 117.241% */
+}
+
+.heading.lv2 {
+  font-size: 3.8rem;
+  line-height: 1.26x; /* 126.316% */
+  letter-spacing: -0.76px;
 }
 
 /* Header */
@@ -171,16 +206,6 @@ a {
   margin-left: 16px;
 }
 
-.hero .content-block .heading {
-  color: #171100;
-
-  font-family: var(--font-heading);
-  font-size: 5.8rem;
-  font-weight: 700;
-  line-height: 1.17; /* 117.241% */
-  letter-spacing: -1.16px;
-}
-
 .hero .content-block .desc:first-of-type {
   margin: 22px 0;
   color: #5f5b53;
@@ -252,3 +277,459 @@ a {
 }
 
 /* Popular */
+.popular {
+  margin: 200px 0;
+}
+
+.popular .popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popular .popular-top .desc {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  line-height: 1.66; /* 166.667% */
+
+  width: 458px;
+}
+
+.popular .popular-top .controls {
+  display: flex;
+  gap: 18px;
+}
+
+.popular .popular-top .control-btn {
+  border: 1px solid var(--primary);
+  background-color: transparent;
+  color: var(--primary);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popular .popular-top .control-btn:hover {
+  color: #fff;
+  background-color: var(--primary);
+  cursor: pointer;
+}
+
+.popular .course-list {
+  gap: 30px;
+  display: flex;
+  margin-top: 55px;
+}
+
+.popular .course-list .course-item {
+  flex: 1;
+  border: 1px solid #e2dfda;
+  border-radius: 12px;
+
+  background: #fff;
+}
+
+.popular .course-list .course-item:hover {
+  border-color: transparent;
+  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+
+.popular .course-list .course-item .thumb {
+  border-radius: 12px 12px 0px 0px;
+  width: calc(100% + 2px);
+
+  height: 278px;
+  margin: -1px;
+  object-fit: cover;
+}
+
+.popular .course-list .course-item .info {
+  padding: 16px 22px 22px;
+}
+
+.popular .course-list .course-item .head,
+.popular .course-list .course-item .foot {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.popular .course-list .course-item .title a {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.66; /* 166.667% */
+  padding-right: 6px;
+}
+
+.popular .course-list .course-item .rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 6px;
+}
+
+.popular .course-list .course-item .rating span {
+  color: #fea31b;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+
+.popular .course-list .course-item .desc {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  margin-top: 6px;
+  line-height: 1.85; /* 185.714% */
+}
+
+.popular .course-list .course-item .foot {
+  margin-top: 12px;
+}
+
+.popular .course-list .course-item .foot .price {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.66; /* 166.667% */
+}
+
+.popular .course-list .course-item .book-btn {
+  border: none;
+}
+
+.popular .course-list .course-item .book-btn:hover {
+  color: #fff;
+  background-color: var(--primary);
+}
+
+.feedback {
+  background: #2e2100;
+}
+
+.feedback .feedback-list {
+  display: flex;
+  overflow: hidden;
+}
+
+.feedback .feedback-item {
+  display: flex;
+  flex-shrink: 0;
+  width: 100%;
+
+  padding: 96px 0;
+}
+
+.feedback .feedback-item .title {
+  margin-top: 18px;
+  color: #f7f7f7;
+
+  font-family: var(--font-heading);
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.41; /* 141.667% */
+}
+
+.feedback .feedback-item .desc {
+  margin-top: 4px;
+  line-height: 1.85; /* 185.714% */
+  font-size: 1.4rem;
+  color: #bfbcb2;
+}
+
+.feedback .feedback-item .dots {
+  display: flex;
+  margin-top: 28px;
+  gap: 6px;
+}
+
+.feedback .feedback-item .dots .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #634700;
+  cursor: pointer;
+}
+
+.feedback .feedback-item .dots .dot.active {
+  background-color: #ffb900;
+  cursor: default;
+}
+
+.feedback .feedback-item .content {
+  width: 66%;
+  margin-left: auto;
+}
+
+.feedback .feedback-item .content blockquote {
+  margin-left: 30px;
+  color: #fff;
+  font-size: 2.6rem;
+  font-style: italic;
+  line-height: 1.53;
+}
+
+.feature {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+
+.feature .body {
+  display: flex;
+  justify-content: space-between;
+}
+
+.feature .body .image {
+  display: flex;
+  gap: 0 30px;
+}
+
+.feature .body .image img {
+  width: 270px;
+  height: 405px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+.feature .body .image .lower {
+  margin-top: 34px;
+}
+
+.feature .content {
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.feature .desc {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+
+.feature .content .cta-btn {
+  margin-top: 32px;
+  width: 137px;
+  color: #fff;
+  background-color: var(--primary);
+}
+
+.feature-2nd {
+  margin-top: 70px;
+}
+
+.feature-2nd .body {
+  flex-direction: row-reverse;
+}
+
+.feature-2nd .content {
+  width: 49%;
+}
+
+.feature-2nd .images img {
+  width: 470px;
+  height: 440px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.blog {
+  margin-top: 135px;
+  padding: 96px 0;
+  background-color: #fffcf4;
+}
+
+.blog .blog-top {
+  text-align: center;
+}
+
+.blog .blog-top .desc {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+  width: 448px;
+  color: #696262;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+
+.blog .blog-list {
+  display: flex;
+  margin-top: 55px;
+  gap: 30px;
+}
+
+.blog .blog-list .item {
+  width: 33.33%;
+  border-radius: 16px;
+  background-color: #fff;
+}
+
+.blog .blog-list .item:hover {
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.blog .blog-list .item .thumb {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 16px 16px 0 0;
+}
+
+.blog .blog-list .info {
+  padding: 20px 20px 28px;
+}
+
+.blog .blog-list .info span {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 1.85; /* 185.714% */
+  padding-bottom: 12px;
+}
+
+.blog .blog-list .info span::before {
+  content: "";
+  display: inline-block;
+  height: 6px;
+  width: 6px;
+  margin-right: 4px;
+  border-radius: 50%;
+  background-color: var(--primary);
+}
+
+.blog .blog-list .info span::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: -27px;
+  content: "";
+  display: inline-block;
+  width: 160px;
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+}
+
+.blog .blog-list .item .title a {
+  display: inline-block;
+  margin: 12px 0;
+  color: #171100;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+}
+
+.blog .blog-list .item .btn {
+  font-size: 1.4rem;
+}
+
+.blog .blog-list .item .btn:hover {
+  background-color: var(--primary);
+}
+
+.blog .dots {
+  margin-top: 38px;
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+
+.blog .dots .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #5f5b53;
+  cursor: pointer;
+}
+
+.blog .dots .dot.active {
+  background-color: var(--primary);
+  cursor: none;
+}
+
+.footer {
+  padding: 96px 135px 0;
+  background: #2e2100;
+}
+
+.footer .row {
+  display: flex;
+  padding-bottom: 38px;
+  border-bottom: 1px solid #59554b;
+}
+
+.footer .row .column {
+  width: 21.6%;
+}
+
+.footer .row .column:nth-child(1) {
+  width: 35%;
+}
+
+.footer .desc {
+  margin-top: 18px;
+  width: 267px;
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  line-height: 1.85; /* 185.714% */
+}
+
+.footer .socials {
+  margin-top: 18px;
+}
+
+.footer .title {
+  padding: 0 48px 14px 0;
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+
+  border-bottom: 1px solid #59554b;
+  display: inline-block;
+}
+
+.footer .list {
+  margin-top: 48px;
+}
+
+.footer .list a {
+  display: inline-block;
+  margin-bottom: 12px;
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  line-height: 1.85; /* 185.714% */
+}
+
+.footer .list li:last-child a {
+  margin: 0;
+}
+
+.footer .list li strong {
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: 600;
+  line-height: 1.85; /* 185.714% */
+}
+
+.footer .copyright {
+  padding: 28px 0;
+}
+
+.footer .copyright p {
+  color: #807d74;
+
+  text-align: center;
+  font-size: 1.4rem;
+  line-height: 1.85; /* 185.714% */
+}
